# Cli-embedded-lib

./: CMakeLists.txt  Readme.md
example/: main.c
inc/: cli.h  cli_command.h
src/: cli.c  cli_command.c
